<resources>

    <string name="app_name">MyRunsDataCollectorLite</string>
     <string name="still">Still</string>
      <string name="walking">Walking</string>
       <string name="running">Running</string>
       <string name="yaw">Yaw</string>
       <string name="roll">Roll</string>
       <string name="pitch">pitch</string>
       <string name="rubbing">Rubbing</string>
       <string name="collecting">Start collecting</string>
         <string name="collectingStop">Stop collecting</string>
       <string name="delete">Delete data</string>   
    <string name="hello">Hello world, my adroid application</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
<string name="Blabla">Tap to see the options</string>
</resources>